[package]
name = "ocypod"
version = "0.4.0"
authors = ["Dave Challis <dave@suicas.net>"]
description = "Ocypod is a Redis-backed service for orchestrating background jobs."
repository = "https://github.com/davechallis/ocypod"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "davechallis/ocypod" }
appveyor = { repository = "davechallis/ocypod" }

[dependencies]
actix-web = "2.0"
actix = "0.9"
actix-rt = "1.0"
clap = "2.33"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
num_cpus = "1.11"
redis = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde-humantime = "0.1"
serde_json = "1.0"
toml = "0.5"
futures = { version = "0.3", features = ["compat" ] }
human-size = "0.4"
humantime = "1.2"

[dev-dependencies]
net2 = "0.2"
rand = "0.7"
